refactor(silverBox): change silverBox wrapper to silverBox container

--- a/public/src/css/modules/_silverBoxReset.scss
+++ b/public/src/css/modules/_silverBoxReset.scss
@@ -1,6 +1,6 @@
 // css reset
-.silverBox-wrapper,
-.silverBox-wrapper * {
+.silverBox-container,
+.silverBox-container * {
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
