--- a/public/src/css/silverBox.scss
+++ b/public/src/css/silverBox.scss
@@ -14,8 +14,9 @@ body {
     }
 }
 
-.silverBox-wrapper {
+.silverBox-container {
     z-index: var(--silverBox-z-index);
+
     // silver box modal
     &.silverBox-overlay {
         width: var(--silverBox-overlay-width);
