--- a/public/src/css/components/_cssConfig.scss
+++ b/public/src/css/components/_cssConfig.scss
@@ -188,6 +188,7 @@
     --silverBox-button-font-weight: 600;
     --silverBox-button-padding: 7px 20px;
     --silverBox-button-min-width: 200px;
+    --silverBox-button-width:100%;
     --silverBox-button-image-max-width: 40px;
     --silverBox-button-text-min-height: 30px;
 
