--- a/public/src/css/components/_icons.scss
+++ b/public/src/css/components/_icons.scss
@@ -7,17 +7,18 @@
     }
 }
 
-.silverBox-customIcon-wrapper {
+.silverBox-image-wrapper {
     display: flex;
+
+    >* {
+        width: var(--silverBox-custom-image-width);
+        max-width: var(--silverBox-custom-image-max-width);
+        height: var(--silverBox-custom-image-height);
+        max-height: var(--silverBox-custom-image-max-height);
+        border-radius: var(--silverBox-custom-image-border-radius);
+    }
 }
 
-.silverBox-custom-icon {
-    width: var(--silverBox-custom-icon-width);
-    max-width: var(--silverBox-custom-icon-max-width);
-    height: var(--silverBox-custom-icon-height);
-    max-height: var(--silverBox-custom-icon-max-height);
-    border-radius: var(--silverBox-custom-icon-border-radius);
-}
 
 .silverBox-default-icon {
     min-width: 50px;
