refactor(silverBox): container overflows instead of silverBox

--- a/public/src/css/components/_cssConfig.scss
+++ b/public/src/css/components/_cssConfig.scss
@@ -89,7 +89,7 @@
     --silverBox-width: 90vw;
     --silverBox-max-width: min-content;
     --silverBox-min-width: 400px;
-    --silverBox-max-height: 90vh;
+    --silverBox-max-height: max-content;
 
     // silverBox overlay
     --silverBox-overlay-width: 100vw;
