refactor(landingPage): import highlightJS styles as module

--- a/public/src/css/index.scss
+++ b/public/src/css/index.scss
@@ -1,5 +1,6 @@
 @import "./modules/reset";
 @import "./modules/fonts";
+@import "./libraries/highlightJS/atom-one-dark-reasonable.min.scss";
 @import "./silverBox.scss";
 
 // default font size for desktop
