refactor(silverBox/buttons): change button creation order

--- a/public/src/css/components/_buttons.scss
+++ b/public/src/css/components/_buttons.scss
@@ -1,5 +1,6 @@
 .silverBox-button-wrapper {
     display: flex;
+    flex-direction: row-reverse;
     justify-content: space-around;
     gap: var(--silverBox-button-wrapper-gap);
     margin-top: var(--silverBox-items-top-margin);
