refactor(buttons): change mobile version button wrapper direction

--- a/public/src/css/components/_buttons.scss
+++ b/public/src/css/components/_buttons.scss
@@ -90,6 +90,6 @@
 
 @media only screen and (max-width: 800px) {
     .silverBox-button-wrapper {
-        flex-direction: column-reverse;
+        flex-direction: column;
     }
 }
