fix(silverBox): split silverBox-border "color" and "width + style"

--- a/public/src/css/silverBox.scss
+++ b/public/src/css/silverBox.scss
@@ -44,6 +44,7 @@ body {
         align-self: center;
         justify-self: center;
         border: var(--silverBox-border);
+        border-color:var(--silverBox-border-color);
         border-radius: var(--silverBox-border-radius);
         padding: var(--silverBox-padding);
         box-shadow: var(--silverBox-box-shadow);
