feat(website/documentation): add documentation version

--- a/public/src/css/documentationPage.scss
+++ b/public/src/css/documentationPage.scss
@@ -1,4 +1,10 @@
 @import "./index.scss";
-main{
-    margin-top:100px;
+main {
+	margin-top: 100px;
+
+	#silverBox-documentation-version {
+		vertical-align: middle;
+		font-size: var(--silverBox-documentation-version-font-size);
+		color: var(--silverBox-documentation-version-color);
+	}
 }
