--- a/public/src/css/index.scss
+++ b/public/src/css/index.scss
@@ -72,6 +72,8 @@ html {
 
 	--silverBox-table-header-font-weight: 600;
 	--silverBox-table-header-font-size: 20px;
+	--silverBox-documentation-version-color: #929292;
+	--silverBox-documentation-version-font-size: 15px;
 
 	--silverBox-document-argument-font-weight: 700;
 	--silverBox-document-font-size: 15px;
