--- a/public/src/css/index.scss
+++ b/public/src/css/index.scss
@@ -152,6 +152,59 @@ body {
 	font-family: Poppins;
 	background: var(--body-bg-color);
 
+	// general
+	.silverBox-exampleCopyButton {
+		position: absolute;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		font-weight: 300;
+		top: 20px;
+		right: 20px;
+		border: none;
+		background: none;
+		color: #fff;
+
+		img {
+			max-width: 30px;
+			transition: 0.2s;
+
+			&.silverBox-copied {
+				filter: grayscale(100%) sepia(100%) hue-rotate(90deg) !important;
+			}
+		}
+
+		img:hover {
+			transform: scale(0.8);
+		}
+	}
+
+	section {
+		scroll-margin-top: 70px;
+	}
+
+	.silverBox-sectionHeader {
+		text-align: center;
+		color: var(--white-in-white);
+		margin-bottom: 20px;
+		font-weight: var(--silverBox-section-header-font-weight);
+		font-size: var(--silverBox-section-header-font-size);
+	}
+	.hidden {
+		display: none !important;
+	}
+
+	code {
+		box-shadow: 1px 4px 5px #07070740;
+		border-radius: 10px;
+		text-align: left;
+		font-weight: var(--silverBox-code-font-weight);
+		letter-spacing: 0.03em;
+		line-height: 30px;
+		padding: 20px !important;
+		font-size: var(--silverBox-code-font-size);
+	}
 	// container
 	.container {
 		display: flex;
@@ -344,69 +397,7 @@ body {
 		}
 	}
 
-	.silverBox-exampleCopyButton {
-		position: absolute;
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		justify-content: center;
-		font-weight: 300;
-		top: 20px;
-		right: 20px;
-		border: none;
-		background: none;
-		color: #fff;
-
-		img {
-			max-width: 30px;
-			transition: 0.2s;
-
-			&.silverBox-copied {
-				filter: grayscale(100%) sepia(100%) hue-rotate(90deg) !important;
-			}
-		}
-
-		img:hover {
-			transform: scale(0.8);
-		}
-	}
-}
-
-@media only screen and (max-width: 900px) {
-	// hide horizontal overflow
-	body {
-		overflow-x: hidden;
-	}
-}
-
-.hidden {
-	display: none !important;
-}
-
-code {
-	box-shadow: 1px 4px 5px #07070740;
-	border-radius: 10px;
-	text-align: left;
-	font-weight: var(--silverBox-code-font-weight);
-	letter-spacing: 0.03em;
-	line-height: 30px;
-	padding: 20px !important;
-	font-size: var(--silverBox-code-font-size);
-}
-
-main {
-	section {
-		scroll-margin-top: 70px;
-	}
-
-	.silverBox-sectionHeader {
-		text-align: center;
-		color: var(--white-in-white);
-		margin-bottom: 20px;
-		font-weight: var(--silverBox-section-header-font-weight);
-		font-size: var(--silverBox-section-header-font-size);
-	}
-
+	// example section
 	#silverBox-exampleSection {
 		row-gap: 20px;
 		display: grid;
@@ -500,6 +491,7 @@ main {
 		}
 	}
 
+	// usage section
 	#silverBox-usageSection {
 		background-color: var(--second-body-bgColor);
 		color: var(--white-in-white);
@@ -546,6 +538,63 @@ main {
 		}
 	}
 
+	// credits section
+	#silverBox-CreditsSection {
+		background-image: url("/public/src/images/desktopWave.png");
+		background-repeat: no-repeat;
+		background-size: cover;
+		margin-top: -25px;
+
+		.silverBox-teamMembers {
+			display: grid;
+			grid-template-columns: repeat(3, 1fr);
+			gap: 30px 70px;
+
+			.silverBox-teamMember {
+				display: flex;
+				align-items: center;
+				column-gap: 10px;
+				border-radius: 15px;
+				padding: 14.5px 60px 14.5px 16px;
+				transition: all 500ms ease-in-out;
+				background-color: var(--box-color);
+				color: var(--white-in-white);
+				font-weight: var(--silverBox-credit-section-team-member-font-weight);
+				font-size: var(--silverBox-credit-section-team-member-font-size);
+				box-shadow: 1px 4px 5px rgba(7, 7, 7, 0.25);
+
+				.silverBox-memberImage {
+					border-radius: 50%;
+					width: 62.5px;
+				}
+
+				.silverBox-memberInfo {
+					.silverBox-memberName {
+						color: var(--primary-700);
+						transition: all 500ms ease-in-out;
+					}
+
+					.silverBox-memberPosition {
+						font-size: var(---silverBox-credit-section-team-member-position-font-size);
+						color: var(--document-border-color);
+						font-weight: var(---silverBox-credit-section-team-member-position-font-weight);
+					}
+				}
+
+				&:hover {
+					background-color: #383c3f;
+
+					.silverBox-memberInfo {
+						.silverBox-memberName {
+							color: white;
+						}
+					}
+				}
+			}
+		}
+	}
+
+	// documentation section
 	#silverBox-documentationSection {
 		.silverBox-tableWrapper {
 			overflow: hidden;
@@ -747,72 +796,18 @@ main {
 		}
 	}
 
-	#silverBox-CreditsSection {
-		background-image: url("/public/src/images/desktopWave.png");
-		background-repeat: no-repeat;
-		background-size: cover;
-		margin-top: -25px;
+	// footer
+	footer {
+		color: var(--document-border-color);
+		padding-block: 12px;
+		text-align: center;
+		background-color: var(--third-body-bgColor);
+		font-size: var(--silverBox-footer-font-size);
 
-		.silverBox-teamMembers {
-			display: grid;
-			grid-template-columns: repeat(3, 1fr);
-			gap: 30px 70px;
-
-			.silverBox-teamMember {
-				display: flex;
-				align-items: center;
-				column-gap: 10px;
-				border-radius: 15px;
-				padding: 14.5px 60px 14.5px 16px;
-				transition: all 500ms ease-in-out;
-				background-color: var(--box-color);
-				color: var(--white-in-white);
-				font-weight: var(--silverBox-credit-section-team-member-font-weight);
-				font-size: var(--silverBox-credit-section-team-member-font-size);
-				box-shadow: 1px 4px 5px rgba(7, 7, 7, 0.25);
-
-				.silverBox-memberImage {
-					border-radius: 50%;
-					width: 62.5px;
-				}
-
-				.silverBox-memberInfo {
-					.silverBox-memberName {
-						color: var(--primary-700);
-						transition: all 500ms ease-in-out;
-					}
-
-					.silverBox-memberPosition {
-						font-size: var(---silverBox-credit-section-team-member-position-font-size);
-						color: var(--document-border-color);
-						font-weight: var(---silverBox-credit-section-team-member-position-font-weight);
-					}
-				}
-
-				&:hover {
-					background-color: #383c3f;
-
-					.silverBox-memberInfo {
-						.silverBox-memberName {
-							color: white;
-						}
-					}
-				}
-			}
+		#sweetAlert,
+		#Untitled-UI {
+			text-decoration: underline;
 		}
-	}
-}
-
-footer {
-	color: var(--document-border-color);
-	padding-block: 12px;
-	text-align: center;
-	background-color: var(--third-body-bgColor);
-	font-size: var(--silverBox-footer-font-size);
-
-	#sweetAlert,
-	#Untitled-UI {
-		text-decoration: underline;
 	}
 }
 
@@ -879,6 +874,7 @@ footer {
 		--silverBox-footer-font-size: 12px;
 	}
 	body {
+		overflow-x: hidden;
 		// general
 		#silverBox-heroSection,
 		#silverBox-exampleSection,
