fix(silverBox): fix silverBox structure
add body components that includes input component, button component, html config and text config

--- a/public/src/css/components/_footer.scss
+++ b/public/src/css/components/_footer.scss
@@ -1,4 +1,4 @@
-.silverBox-footer {
+.silverBox-footer-wrapper {
 	margin-top: var(--silverBox-items-top-margin);
 	color: var(--silverBox-footer-color);
 	font-size: var(--silverBox-footer-font-size);
