feat(silverBox/positionedModals): add slide animation)

--- a/public/src/css/components/_cssConfig.scss
+++ b/public/src/css/components/_cssConfig.scss
@@ -131,6 +131,12 @@
 	--silverBox-bottom-right-distance: 10px;
 	--silverBox-bottom-left-distance: 10px;
 
+	// slide animations
+	--silverBox-slide-animation-left-distance: 10px;
+	--silverBox-slide-animation-right-distance: 10px;
+	--silverBox-slide-animation-top-distance: 10px;
+	--silverBox-slide-animation-bottom-distance: 10px;
+
 	// silver box end -------------------
 
 	// header start -------------------
