--- a/public/src/css/components/_cssConfig.scss
+++ b/public/src/css/components/_cssConfig.scss
@@ -7,6 +7,7 @@
 		--silverBox-background-color: white;
 		--silverBox-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
 		--silverBox-border-color: #fff;
+		--silverBox-timer-bar: #808080;
 		// header
 		--silverBox-title-color: #000;
 		--silverBox-text-color: #475467;
@@ -57,6 +58,7 @@
 		--silverBox-background-color: #1f2637;
 		--silverBox-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
 		--silverBox-border-color: #171e2e;
+		--silverBox-timer-bar: grey;
 		// header
 		--silverBox-title-color: #fff;
 		--silverBox-text-color: #9fa3ad;
